// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons Buttons 1`] = `
<RCTScrollView>
  <View>
    <View
      color="background.primary"
      flex={1}
      p={10}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "flex": 1,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2f3941",
              "borderRadius": 2,
              "marginBottom": 9,
              "marginTop": 9,
              "opacity": 1,
              "paddingBottom": 12,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 12,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                },
              ]
            }
            textStyle="solid"
          >
            Default is solid
          </Text>
        </View>
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2f3941",
              "borderRadius": 2,
              "marginBottom": 9,
              "marginTop": 9,
              "opacity": 0.5,
              "paddingBottom": 12,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 12,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                },
              ]
            }
            textStyle="solid"
          >
            Default Disbaled
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2f3941",
              "borderRadius": 2,
              "marginBottom": 9,
              "marginTop": 9,
              "opacity": 1,
              "paddingBottom": 12,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 12,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                },
              ]
            }
            textStyle="solid"
          >
            Solid Button
          </Text>
        </View>
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2f3941",
              "borderRadius": 2,
              "marginBottom": 9,
              "marginTop": 9,
              "opacity": 0.5,
              "paddingBottom": 12,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 12,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                },
              ]
            }
            textStyle="solid"
          >
            Solid Button Disabled
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderColor": "black",
              "borderRadius": 2,
              "borderStyle": "solid",
              "borderWidth": 2,
              "marginBottom": 9,
              "marginTop": 9,
              "opacity": 1,
              "paddingBottom": 12,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 12,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2f3941",
                },
              ]
            }
            textStyle="inverse"
          >
            Inverse Button
          </Text>
        </View>
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderColor": "black",
              "borderRadius": 2,
              "borderStyle": "solid",
              "borderWidth": 2,
              "marginBottom": 9,
              "marginTop": 9,
              "opacity": 0.5,
              "paddingBottom": 12,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 12,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2f3941",
                },
              ]
            }
            textStyle="inverse"
          >
            Invese Button Disabled
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderRadius": 2,
              "marginBottom": 9,
              "marginTop": 9,
              "opacity": 1,
              "paddingBottom": 12,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 12,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2f3941",
                },
              ]
            }
            textStyle="text"
          >
            Text Button
          </Text>
        </View>
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderRadius": 2,
              "marginBottom": 9,
              "marginTop": 9,
              "opacity": 0.5,
              "paddingBottom": 12,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 12,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2f3941",
                },
              ]
            }
            textStyle="text"
          >
            Text Button Disabled
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Storyshots Foundation/Typography Font Colors 1`] = `
<RCTScrollView>
  <View>
    <View
      color="background.primary"
      flex={1}
      p={10}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "flex": 1,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          color="background.primary"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
            ]
          }
        >
          <View
            backgroundColor="background.base"
            color="background.primary"
            style={
              Array [
                Object {
                  "backgroundColor": "#2f3941",
                  "color": "#ffffff",
                },
              ]
            }
          >
            <Text
              color="font.white"
              fontSize="xxl"
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontSize": 32,
                  },
                ]
              }
              textStyle="defaultTextStyle"
            >
              White
            </Text>
          </View>
          <Text
            color="font.black"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            Black
          </Text>
          <Text
            color="font.base"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#2f3941",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            Base
          </Text>
          <Text
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            Primary
          </Text>
          <Text
            color="font.secondary"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#828282",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            Secondary
          </Text>
          <Text
            color="font.danger"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#ff6969",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            Danger
          </Text>
          <Text
            color="font.grey100"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#f8f9f9",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            Grey
          </Text>
          <Text
            color="font.grey100"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#f8f9f9",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            Grey 100
          </Text>
          <Text
            color="font.grey200"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#e9ebed",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            Grey 200
          </Text>
          <Text
            color="font.grey300"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#d8dcde",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            Grey 300
          </Text>
          <Text
            color="font.grey400"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#c2c8cc",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            Grey 400
          </Text>
          <Text
            color="font.grey500"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#87929d",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            Grey 500
          </Text>
          <Text
            color="font.grey600"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#68737d",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            Grey 600
          </Text>
          <Text
            color="font.grey800"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#2f3941",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            Grey 800
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Storyshots Foundation/Typography Font Families 1`] = `
<RCTScrollView>
  <View>
    <View
      color="background.primary"
      flex={1}
      p={10}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "flex": 1,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          color="background.primary"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
            ]
          }
        >
          <Text
            fontFamily="inter400"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            Inter Regular 400
          </Text>
          <Text
            fontFamily="inter700"
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontFamily": "Inter-Bold",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            Inter Bold 700
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Storyshots Foundation/Typography Font Sizes 1`] = `
<RCTScrollView>
  <View>
    <View
      color="background.primary"
      flex={1}
      p={10}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "flex": 1,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          color="background.primary"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
            ]
          }
        >
          <Text
            fontSize="xs"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 10,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            xs as 10px
          </Text>
          <Text
            fontSize="s"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 12,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            s as 12px
          </Text>
          <Text
            fontSize="m"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 14,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            m as 14px
          </Text>
          <Text
            fontSize="l"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 18,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            l as 18px
          </Text>
          <Text
            fontSize="xl"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 24,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            xl as 24px
          </Text>
          <Text
            fontSize="xxl"
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 32,
                },
              ]
            }
            textStyle="defaultTextStyle"
          >
            xxl as 32px
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Storyshots Foundation/Typography Text Styles 1`] = `
<RCTScrollView>
  <View>
    <View
      color="background.primary"
      flex={1}
      p={10}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "flex": 1,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          color="background.primary"
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontFamily": "Inter-Bold",
                  "fontSize": 18,
                },
              ]
            }
            textStyle="header"
          >
            Header
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 14,
                },
              ]
            }
            textStyle="body"
          >
            Body
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#1b1f23",
                  "fontSize": 12,
                },
              ]
            }
            textStyle="subtext"
          >
            Subtext
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
